ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.7.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      this is easy to reproduce:

      foo:SECONDARY> db.test.find()
      error:

      { "$err" : "not master and slaveok=false", "code" : 13435 }

      foo:SECONDARY> db.test.group({initial:

      {n:0}

      , reduce: function(obj,out){out.n += obj.a;}})
      [

      { "n" : 3 }

      ]
      foo:SECONDARY>

            Assignee:
            Antoine Girbal (Inactive)
            Reporter:
            Antoine Girbal (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: