[SERVER-2286]: slaveOk is ignored for group() and mapReduce(), these are allowed to run on slave always